#VERSION 0.9.0#

 - fixed variable name error in method __call() of class Peak_Controller_Action
 - fixed array offset problem in _exception2table() of class Peak_Controller_Internal_PkError
 - fixed method getMethodDoc() who was not returning long description in class Peak_Zreflection
 - fixed variable name error in getMethodsByInheritance() of class Peak_Zreflection
 - fixed minor trim problem of method getClassDeclaration() in Peak_Zreflection
 - modified getClassDocTags() of Peak_Zreflection to return array instead of object
 - added methods getParentMethods(), getSelfMethods(), getParentProperties() and getSelfProperties() to Peak_Zreflection
 - fixed method paramsToArray() from Peak_Zreflection
 - added methods getMethods(), getProperties() and getConstants() to Peak_Zreflection
 - added method query() to Peak_Model_Zendatable
 - fixed methods render() and output() in Peak_Render_VirtualLayouts due to recent change in Peak_View_Render
 - fixed Vendors path name in autoload.php
 - added constant PHP_CLOSE_TAG to Peak_Codegen
 - passed method generate() to abstract method in Peak_Codegen
 - moved method getIndent() from Peak_Codegen_Class to Peak_Codegen
 - fixed method generate() that was not using $_is_abstract property in Peak_Codegen_Class
 - added property $_is_final and method isFinal() to Peak_Codegen_Class
 - added null default value to param $path of method Peak_View_Render::render()
 - modified method init() from Peak_Core to throw an exception when path(s) or config constants are missing 
 - added new constant to Peak_Exception and updated method handleErrConstToText()
 - updated Zend Framework version 1.11.1 to 1.11.10 in vendors folder
 - updated geshi version and deleted old php folder in vendors folder
 - renamed libs folder to vendors, changed set_include_path in Peak_Core accordingly
 - fixed method Peak_Config_Json::_jsonError(), JSON_ERROR_UTF8 constant don't exists until php 5.3.3